feat: logging plugin extended for mcp requests
